--- a/index.html
+++ b/index.html
@@ -3,19 +3,14 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>JavaScript Calculator jQuery</title>
-  
-  
-  
-      <link rel="stylesheet" href="./style.css">
-
-  
+  <title>JQuery JavaScript Calculator </title>
+  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+  <link rel="stylesheet" href="./style.css">
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js'></script>
 </head>
 
 <body>
-
-  <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
-<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+<script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 <div id="root">
    <div id="calc_container">
         <div id="display_cont">
@@ -44,18 +39,7 @@
         </div>
       </div>
 </div>
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/react/16.8.4/umd/react.production.min.js'></script>
-<script src='https://cdnjs.cloudflare.com/ajax/libs/react-dom/16.8.4/umd/react-dom.production.min.js'></script>
-<script src='https://cdnjs.cloudflare.com/ajax/libs/xregexp/3.2.0/xregexp-all.min.js'></script>
-<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js'></script>
-
-  
-
-    <script  src="./script.js"></script>
-
-
-
-
+<script  src="./script.js"></script>
 </body>
 
 </html>
